tests/errors/list_literal_type_mismatch.dang
# This should fail: mixing types in list literal
pub result = [[], ["foo"], [3]]
